--- a/nginx/conf.d/fw.conf.example
+++ b/nginx/conf.d/fw.conf.example
@@ -1,8 +1,7 @@
 # Renomeie para fw.conf
 
 
-
-
+## @todo https://www.nginx.com/blog/nginx-high-performance-caching/
 ## @todo https://www.nginx.com/blog/mitigating-ddos-attacks-with-nginx-and-nginx-plus/
 ## @todo possivelmente usar limit_except http://nginx.org/en/docs/http/ngx_http_core_module.html#limit_except
 
